--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <body>
-        <h1 class="page-title">Vídeos em alta</h1>
+        <h1 class="page-title">Os vídeos mais SHOW do pedaço</h1>
             <p class="page-description">Veja os vídeos mais acessados da semana</p>
 
         <section class="videos">
